--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,7 +7,7 @@ $color-headings: #1b0760;
 $color-body: #918ca4;
 $headings: 3;
 @use 'mixins';
-
+//  Typhography
 html {
     font-size: 62.5%;
 }
@@ -40,12 +40,53 @@ h3 {
 p {
     margin-top: 0;
 }
+@media screen and (min-width: 1024px) {
+    body {
+        font-size: 1.8rem;
+    }
+    h1 {
+        font-size: 8rem;
+    }
+    h2 {
+        font-size: 4rem;
+    }
+    h3 {
+        font-size: 2.4rem;
+    }
+}
+//  Links
+a {
+    text-decoration: none;
+}
+.link--arrow {
+    color: $color-accent;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+
+    &::after {
+        content: '-->';
+        margin-left: 5px;
+        transition: margin-left 0.15s;
+    }
+    &:hover::after {
+        margin-left: 10px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .link--arrow {
+        font-size: 1.5rem;
+    }
+}
+
+// Buttons
 .btn {
     outline: none;
     border-radius: 25%;
     border: 0;
 }
 
+// Navbar
 .navbar {
     background-color: #000;
 }
@@ -69,20 +110,6 @@ p {
 @media screen and (min-width: 640px) {
 }
 @media screen and (min-width: 768px) {
-}
-@media screen and (min-width: 1024px) {
-    body {
-        font-size: 1.8rem;
-    }
-    h1 {
-        font-size: 8rem;
-    }
-    h2 {
-        font-size: 4rem;
-    }
-    h3 {
-        font-size: 2.4rem;
-    }
 }
 @media screen and (min-width: 1280px) {
 }
