--- a/scss/index.scss
+++ b/scss/index.scss
@@ -118,13 +118,37 @@ a {
     border: 0;
 }
 
+// Lists
+.list {
+    list-style: none;
+    padding-left: 0;
+    color: $color-headings;
+    // font-size: bold;
+}
+.list--inline .list__item {
+    display: inline-block;
+    margin-right: 2rem;
+}
+.list--tick {
+    list-style-image: url('../icons/tick.svg');
+    margin-left: 3rem;
+    .list__item {
+        padding-left: 0.5rem;
+        margin-bottom: 1rem;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .list--tick .list__item {
+        padding-left: 0;
+    }
+}
+
 // Navbar
 .navbar {
     background-color: #000;
 }
 
 .navbar__list {
-    list-style: none;
     flex-direction: column;
     display: flex;
     color: white;
