--- a/scss/index.scss
+++ b/scss/index.scss
@@ -17,10 +17,15 @@ $headings: 3;
 html {
     font-size: 62.5%;
 }
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
 
 body {
-    font-family: Inter, Arial, Helvetica, sans-serif;
     color: $color-body;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 2.4rem;
     line-height: 1.5;
 }
@@ -66,9 +71,9 @@ a {
 }
 .link--arrow {
     color: $color-accent;
-    text-transform: uppercase;
     font-size: 2rem;
     font-weight: bold;
+    text-transform: uppercase;
 
     &::after {
         content: '-->';
@@ -93,54 +98,103 @@ a {
     font-weight: 600;
     padding: 0.5rem 2rem;
     white-space: nowrap;
-}
-
-.badge--primary {
-    background-color: $color-primary;
-    color: #fff;
-}
-.badge--secondary {
-    background-color: $color-secondary;
-    color: #fff;
-}
-
-.badge--small {
-    font-size: 1.6rem;
+    &--primary {
+        background-color: $color-primary;
+        color: #fff;
+    }
+    &--secondary {
+        background-color: $color-secondary;
+        color: #fff;
+    }
+    &--small {
+        font-size: 1.6rem;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .badge {
         font-size: 1.5rem;
-    }
-    .badge--small {
-        font-size: 1.2rem;
+        &--small {
+            font-size: 1.2rem;
+        }
     }
 }
 
 // Buttons
 .btn {
-    outline: none;
-    border-radius: 25%;
+    text-align: center;
+    // padding: 2.5rem 16rem;
+    border-radius: 40px;
     border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    outline: none;
+    padding: 2rem 3rem;
+    text-transform: uppercase;
+    white-space: nowrap;
+    margin: 1rem 0;
+    &--outline {
+        background-color: #fff;
+        color: $color-headings;
+        border: 2px solid $color-headings;
+    }
+    &--outline:hover {
+        background-color: $color-headings;
+        color: #fff;
+    }
+    &--primary {
+        background-color: $color-primary;
+        color: #fff;
+    }
+    &--primary:hover {
+        background-color: darken($color-primary, 10%);
+    }
+
+    &--secondary {
+        background-color: $color-secondary;
+        color: #fff;
+    }
+    &--secondary:hover {
+        background-color: darken($color-secondary, 10%);
+    }
+    &--accent {
+        background-color: $color-accent;
+        color: #fff;
+        margin: 0;
+    }
+    &--accent:hover {
+        background-color: darken($color-accent, 10%);
+    }
+    &--block {
+        display: inline-block;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
 }
 
 // Lists
 .list {
+    // font-size: bold;
+    color: $color-headings;
     list-style: none;
     padding-left: 0;
-    color: $color-headings;
-    // font-size: bold;
-}
-.list--inline .list__item {
-    display: inline-block;
-    margin-right: 2rem;
-}
-.list--tick {
-    list-style-image: url('../icons/tick.svg');
-    margin-left: 3rem;
-    .list__item {
-        padding-left: 0.5rem;
+    &--inline .list__item {
+        display: inline-block;
+        margin-right: 2rem;
+    }
+    &--tick {
+        list-style-image: url('../icons/tick.svg');
+        margin-left: 3rem;
+    }
+    &--tick .list__item {
         margin-bottom: 1rem;
+        padding-left: 0.5rem;
     }
 }
 @media screen and (min-width: 1024px) {
@@ -152,17 +206,17 @@ a {
 // Icons
 .icon {
     @include size(40px);
-}
-.icon--primary {
-    fill: $color-primary;
-}
-.icon-container {
-    @include size(64px);
-    align-items: center;
-    background: #f3f9fa;
-    border-radius: 100%;
-    display: inline-flex;
-    justify-content: center;
+    &--primary {
+        fill: $color-primary;
+    }
+    &-container {
+        @include size(64px);
+        align-items: center;
+        background: #f3f9fa;
+        border-radius: 100%;
+        display: inline-flex;
+        justify-content: center;
+    }
 }
 
 // Navbar
@@ -185,11 +239,11 @@ a {
 }
 
 // Responsiveness
-@media screen and (min-width: 640px) {
-}
-@media screen and (min-width: 768px) {
-}
-@media screen and (min-width: 1280px) {
-}
-@media screen and (min-width: 1536px) {
-}
+// @media screen and (min-width: 640px) {
+// }
+// @media screen and (min-width: 768px) {
+// }
+// @media screen and (min-width: 1280px) {
+// }
+// @media screen and (min-width: 1536px) {
+// }
