Build inputs component

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,6 +7,8 @@ $color-accent: #ff3400;
 $color-headings: #1b0760;
 $color-body: #918ca4;
 $headings: 3;
+$color-border: #ccc;
+$border-radius: 30px;
 
 // Mixins
 @mixin size($height: 100vh, $width: $height) {
@@ -219,6 +221,39 @@ a {
     }
 }
 
+// Inputs
+.input {
+    border-radius: $border-radius;
+    border: 1px solid $color-border;
+    color: $color-headings;
+    font-size: 2rem;
+    outline: 0;
+    padding: 1.5rem 3.5rem;
+    &-group {
+        border: 1px solid $color-border;
+        box-shadow: 0 0 3px $color-border;
+        border-radius: $border-radius;
+        display: flex;
+    }
+    &-group .input {
+        border: 0;
+        flex-grow: 1;
+        padding: 1.5rem 1rem;
+        // Push thing to the left
+    }
+    &-group .btn {
+        margin: 4px;
+    }
+}
+::placeholder {
+    color: #cdcbd7;
+    // font-weight: 100;
+}
+@media screen and (min-width: 1024px) {
+    .input {
+        font-size: 1.5rem;
+    }
+}
 // Navbar
 .navbar {
     background-color: #000;
