--- a/components/icons.html
+++ b/components/icons.html
@@ -1,29 +1,42 @@
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#computer"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#easy"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#growth"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#line"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#menu"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#quotes"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#search"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#settings"></use></svg
-><span class="icon-container">
-    <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#snap"></use>
-    </svg> </span
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#tick"></use></svg
-><svg class="icon icon--primary">
-    <use xlink:href="images/sprite.svg#wordpress"></use></svg
-><svg class="icon">
-    <use xlink:href="images/sprite.svg#chevron"></use></svg
-><svg class="icon">
+    <use xlink:href="images/sprite.svg#computer"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#easy"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#growth"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#line"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#menu"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#quotes"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#search"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#settings"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#tick"></use>
+</svg>
+<svg class="icon icon--primary">
+    <use xlink:href="images/sprite.svg#wordpress"></use>
+</svg>
+<svg class="icon">
+    <use xlink:href="images/sprite.svg#chevron"></use>
+</svg>
+<svg class="icon">
     <use xlink:href="images/sprite.svg#clock"></use>
 </svg>
+<span class="icon-container">
+    <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#snap"></use>
+        <!-- Main -->
+    </svg>
+</span>
