--- a/components/hero.html
+++ b/components/hero.html
@@ -7,6 +7,15 @@
             </p>
             <a class="btn btn--accent btn--stretched">GET STARTED</a>
         </header>
-        <img src="images/banner.png" alt="" class="hero__img" />
+        <picture
+            ><source
+                type="image/webp"
+                srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
+
+            <source
+                type="image/png"
+                srcset="images/banner.png 1x, images/banner@2x.png 2x" />
+            <img src="images/banner.png" alt="" class="hero__img"
+        /></picture>
     </div>
 </section>
