--- a/components/hero.html
+++ b/components/hero.html
@@ -10,12 +10,10 @@
         <picture
             ><source
                 type="image/webp"
-                srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
+                srcset="banner.webp 1x, banner@2x.webp 2x" />
 
-            <source
-                type="image/png"
-                srcset="images/banner.png 1x, images/banner@2x.png 2x" />
-            <img src="images/banner.png" alt="" class="hero__img"
+            <source type="image/png" srcset="banner.png 1x, banner@2x.png 2x" />
+            <img src="banner.png" alt="" class="hero__img"
         /></picture>
     </div>
 </section>
