--- a/components/icons.html
+++ b/components/icons.html
@@ -1,42 +1,42 @@
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#computer"></use>
+    <use xlink:href="sprite.svg#computer"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#easy"></use>
+    <use xlink:href="sprite.svg#easy"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#growth"></use>
+    <use xlink:href="sprite.svg#growth"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#line"></use>
+    <use xlink:href="sprite.svg#line"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#menu"></use>
+    <use xlink:href="sprite.svg#menu"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#quotes"></use>
+    <use xlink:href="sprite.svg#quotes"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#search"></use>
+    <use xlink:href="sprite.svg#search"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#settings"></use>
+    <use xlink:href="sprite.svg#settings"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#tick"></use>
+    <use xlink:href="sprite.svg#tick"></use>
 </svg>
 <svg class="icon icon--primary">
-    <use xlink:href="images/sprite.svg#wordpress"></use>
+    <use xlink:href="sprite.svg#wordpress"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#chevron"></use>
+    <use xlink:href="sprite.svg#chevron"></use>
 </svg>
 <svg class="icon">
-    <use xlink:href="images/sprite.svg#clock"></use>
+    <use xlink:href="sprite.svg#clock"></use>
 </svg>
 <span class="icon-container">
     <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#snap"></use>
+        <use xlink:href="sprite.svg#snap"></use>
         <!-- Main -->
     </svg>
 </span>
