--- a/components/inputs.html
+++ b/components/inputs.html
@@ -1,7 +1,7 @@
 <div class="input-group">
     <span class="icon-container">
         <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#snap"></use>
+            <use xlink:href="sprite.svg#snap"></use>
         </svg>
     </span>
     <input type="text" class="input" placeholder="Enter domain name here..." />
