--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,9 +1,7 @@
 <nav class="nav collapsible">
-    <a href="/" class="nav__brand"
-        ><img src="./images/logo.svg" alt="Mosify"
-    /></a>
+    <a href="/" class="nav__brand"><img src="logo.svg" alt="Mosify" /></a>
     <svg class="icon icon--white nav__toggler">
-        <use xlink:href="images/sprite.svg#menu"></use>
+        <use xlink:href="sprite.svg#menu"></use>
     </svg>
     <ul class="list nav__list collapsible__content">
         <!-- <ul class="list list--inline"> -->
