--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,3 @@
-@use 'normalize';
 // Variables
 $color-primary: #2584ff;
 $color-secondary: #00d9ff;
@@ -140,7 +139,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -201,7 +200,6 @@ a {
 // Lists
 .list {
     // font-size: bold;
-
     list-style: none;
     padding-left: 0;
     &--inline .list__item {
@@ -267,6 +265,7 @@ a {
         border: 0;
         flex-grow: 1;
         padding: 1.5rem 2rem;
+        width: 0;
         // Push thing to the left
     }
     &-group .btn {
@@ -348,7 +347,7 @@ a {
             position: relative;
         }
         .card__header::before {
-            content: url(../images/popular.svg);
+            content: url(popular.svg);
             width: 40px;
             display: inline-block;
             position: absolute;
@@ -669,9 +668,10 @@ a {
         font-weight: 600;
         display: grid;
         justify-items: center;
-        grid-template: repeat(2, 6rem) / repeat(3, 1fr);
+        grid-template: repeat(2, 6rem) / repeat(2, 1fr);
         max-width: 70rem;
         margin: 0 auto;
+        color: $color-headings;
     }
 }
 @media screen and (min-width: 768px) {
@@ -815,37 +815,8 @@ a {
         }
     }
 }
-// @media screen and (min-width: 1024px) {
-//     .footer {
-//         .grid {
-//             grid-template: 1fr / repeat(5, minmax(10rem, 1fr));
-//             grid-template-areas: 'copyright list list list list';
-//         }
-//         &__item {
-//             border-bottom: 0;
-//         }
-//         .collapsible__chevron {
-//             display: none;
-//         }
-//         .collapsible__content {
-//             max-height: 100vh;
-//             opacity: 1;
-//         }
-//         &__brand {
-//             // order: 2;
-//             grid-area: copyright;
-//         }
-//     }
-// }
+/* Sign-up Callout */
 
-// Responsiveness
-// @media screen and (min-width: 640px) {
-// }
-// @media screen and (min-width: 768px) {
-// }
-// @media screen and (min-width: 1024px) {
-// }
-// @media screen and (min-width: 1280px) {
-// }
-// @media screen and (min-width: 1536px) {
-// }
+.callout-signup {
+    transform: translateY(5rem);
+}
